cmake_minimum_required(VERSION 3.26)
project(codeforse C)

set(CMAKE_C_STANDARD 11)

add_executable(codeforse main.c)
add_executable(1 1.c)
add_executable(2 2.c)
add_executable(8 8.c)
add_executable(3 3.c)
add_executable(7 7.c)
add_executable(5 5.c)
add_executable(4 4.c)
add_executable(6 6.c)
add_executable(10 10.c)
add_executable(11 11.c)
add_executable(9 9.c)
add_executable(12 12.c)
add_executable(1.new 1.new.c)
add_executable(10.new 10.new.c)
